wip(spatial) Add DistanceToCoastGradient repository, and use it from the ReferentialService