@@ -22,6 +22,7 @@ package net.sumaris.core.dao.referential.metier;
  * #L%
  */
 
+import lombok.NonNull;
 import net.sumaris.core.dao.referential.ReferentialDao;
 import net.sumaris.core.dao.referential.ReferentialRepositoryImpl;
 import net.sumaris.core.dao.referential.taxon.TaxonGroupRepository;
@@ -45,7 +46,6 @@ import javax.persistence.EntityManager;
 import javax.persistence.TypedQuery;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 
@@ -118,7 +118,7 @@ public class MetierRepositoryImpl
                     })
                     // If join search: sort using a comparator (sort was skipped in query)
                     .sorted(sortingOutsideQuery ? Beans.naturalComparator(sortAttribute, sortDirection) : Beans.unsortedComparator())
-                    .collect(Collectors.toList());
+                    .toList();
         }
     }
 
@@ -154,11 +154,11 @@ public class MetierRepositoryImpl
     /* -- protected method -- */
 
     @Override
-    protected Specification<Metier> toSpecification(IReferentialFilter filter, ReferentialFetchOptions fetchOptions) {
+    protected Specification<Metier> toSpecification(@NonNull IReferentialFilter filter, ReferentialFetchOptions fetchOptions) {
         return super.toSpecification(filter, fetchOptions)
                 .and(alreadyPracticedMetier(filter))
                 .and(inGearIds(filter))
-                .and(inLocationIds(filter))
+                .and(inSpatialLocationIds(filter))
                 .and(inTaxonGroupTypeIds(filter));
     }
 
